[gd_scene load_steps=3 format=3 uid="uid://cf44rpn6il8f0"]

[ext_resource type="Script" uid="uid://d3b2s0g3klkba" path="res://scenes/plant_room/plant_workshop/dragndrop.gd" id="1_tfd16"]
[ext_resource type="Theme" uid="uid://b4uu16ao6kfi0" path="res://themes/new_theme.tres" id="2_yhjsv"]

[node name="DraggableElement" type="Node2D"]
script = ExtResource("1_tfd16")

[node name="Button" type="Button" parent="."]
offset_left = -6.0
offset_top = -7.0
offset_right = 6.0
offset_bottom = 9.0
mouse_filter = 1
theme = ExtResource("2_yhjsv")

[node name="ClickTimer" type="Timer" parent="."]
one_shot = true

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="timeout" from="ClickTimer" to="." method="_on_click_timer_timeout"]
